VOA-3592 Upgrade AutoBARS frontend libraries and plugins